<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/margin30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/appLogo" />

    <TextView
        android:id="@+id/joinTheMagicTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_the_magic"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin60"
        android:textAlignment="viewStart"
        android:textSize="@dimen/largeTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"/>

    <TextView
        android:id="@+id/beCinergyEliteTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/be_cinergy_elite"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin10"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:textSize="@dimen/xxxtraLargeTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinTheMagicTV"/>

    <TextView
        android:id="@+id/enjoyFreePopcornTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_free_popcorn"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:drawablePadding="@dimen/margin8"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin40"
        android:textAlignment="viewStart"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beCinergyEliteTV"
        app:drawableStartCompat="@drawable/baseline_star_24" />

    <TextView
        android:id="@+id/enjoyEliteRewardTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_elite_reward"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginStart="@dimen/margin16"
        android:drawablePadding="@dimen/margin8"
        android:layout_marginTop="@dimen/margin8"
        android:textAlignment="viewStart"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoyFreePopcornTV"
        app:drawableStartCompat="@drawable/baseline_star_24" />

    <TextView
        android:id="@+id/enjoySpecialBirthdayTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_special_birthday"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginStart="@dimen/margin16"
        android:drawablePadding="@dimen/margin8"
        android:layout_marginTop="@dimen/margin8"
        android:textAlignment="viewStart"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoyEliteRewardTV"
        app:drawableStartCompat="@drawable/baseline_star_24" />

    <TextView
        android:id="@+id/enjoyExclusiveContentTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_exclusive_content"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginStart="@dimen/margin16"
        android:drawablePadding="@dimen/margin8"
        android:layout_marginTop="@dimen/margin8"
        android:textAlignment="viewStart"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoySpecialBirthdayTV"
        app:drawableStartCompat="@drawable/baseline_star_24" />

    <Button
        android:id="@+id/signInNowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginEnd="@dimen/margin60"
        android:layout_marginTop="@dimen/margin60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in_now"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumTextSize"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/appButtonColor"
        app:layout_constraintTop_toBottomOf="@+id/enjoyExclusiveContentTV"/>

    <TextView
        android:id="@+id/dontHaveAnAccountTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@color/lightGray"
        android:fontFamily="sans-serif"
        android:layout_marginStart="@dimen/margin16"
        android:drawablePadding="@dimen/margin8"
        android:layout_marginTop="@dimen/margin30"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInNowButton" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginEnd="@dimen/margin60"
        android:layout_marginTop="@dimen/margin10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumTextSize"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="@drawable/rounded_button_background"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveAnAccountTV"/>

    <Button
        android:id="@+id/continueAsGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginEnd="@dimen/margin60"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/continueAsGuest"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumTextSize"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="@drawable/rounded_button_background"
        app:layout_constraintTop_toBottomOf="@+id/signUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>